- Select Sort Working with backend

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,4 +3,8 @@
 <br>
 <a routerLink="/bubble-sort">Bubble Sort</a>
 <br>
+<br>
+<a routerLink="/select-sort">Select Sort</a>
+<br>
+<br>
 <a routerLink="/signal-rtest">Signal R Test</a>
