- Insertion Sort Working with backend

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,4 +7,7 @@
 <a routerLink="/select-sort">Select Sort</a>
 <br>
 <br>
+<a routerLink="/insertion-sort">Insertion Sort</a>
+<br>
+<br>
 <a routerLink="/signal-rtest">Signal R Test</a>
