--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,4 +10,7 @@
 <a routerLink="/insertion-sort">Insertion Sort</a>
 <br>
 <br>
+<a routerLink="/partition-example">Partition Example</a>
+<br>
+<br>
 <a routerLink="/signal-rtest">Signal R Test</a>
